# local-drone

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  flake.nix  imgui.ini  vcpkg.json
.zed/: debug.json  settings.json  tasks.json
game/: CMakeLists.txt
game/src/game/: game.cpp  game.h  game_systems.cpp  game_systems.h  graphics.cpp  graphics.h  main.cpp
game/src/game/agriculture/: agriculture_system.h
game/src/game/cable/: CMakeLists.txt  cable_system.cpp  cable_system.h  components.h  spool_system.cpp  spool_system.h
game/src/game/character/: character_system.cpp
game/src/game/control/: CMakeLists.txt  action_bind.cpp  control_system.cpp  control_system.h  drone_control_system.cpp  drone_control_system.h  mouse_raycast.h  mouse_raycast_system.cpp
game/src/game/drone/: CMakeLists.txt  components.h
game/src/game/loader_fabric/: CMakeLists.txt
game/src/game/machine/: machine_loader.cpp
game/test/: CMakeLists.txt
lc_client/: CMakeLists.txt
lc_client/src/lc_client/: i_game_logic.h
lc_client/src/lc_client/eng_cubemaps/: CMakeLists.txt
lc_client/src/lc_client/eng_graphics/: CMakeLists.txt  texture_manager.cpp
lc_client/src/lc_client/eng_gui/: gui_console.cpp
lc_client/src/lc_client/eng_input/: glfw_input.cpp  key_code.h  key_code_strings.cpp
lc_client/src/lc_client/eng_model/: model_loading.cpp  model_manager.cpp  model_manager.h  (+1 more)
libs/glad/src/: glad.c
libs/stb/: CMakeLists.txt
res/: info.json
res/dev/: pack.json
res/dev/scripts/: example_script.lua  example_script_2.lua
res/game/: pack.json
res/game/machines/: tree.xml
(+106 files in other folders)
